<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/activity_about"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/form_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AboutLabel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <TextView style="@style/AboutLabel"
                android:id="@+id/application_version_text_view"
                android:layout_gravity="center_horizontal"/>

            <TextView style="@style/AboutLabel"
                android:text="@string/about_first_paragraph"/>

            <TextView style="@style/AboutLabel"
                android:text="@string/about_second_paragraph"/>

            <TextView style="@style/AboutLabel"
                android:text="@string/about_third_paragraph"/>

            <TextView style="@style/AboutLabel"
                android:text="@string/about_fourth_paragraph"/>

            <Button android:id="@+id/contact_developer_button"
                style="@style/Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_contact"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>