<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/login_form_info"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_login"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:nextFocusDown="@+id/password_edit_text"
            android:singleLine="true"
            app:errorEnabled="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/input_hint_login"
            app:met_floatingLabelTextSize="17sp">

        </com.rengwuxian.materialedittext.MaterialEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_password"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:singleLine="true"
            app:errorEnabled="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/input_hint_password"
            app:met_floatingLabelTextSize="17sp">

        </com.rengwuxian.materialedittext.MaterialEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_store_user_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_store_user_data">

        </CheckBox>
    </LinearLayout>
</LinearLayout>
